storage/pipeline_runs/7c934759-39e/06_deploy/code/istio-virtualservice.yaml
# istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: plaza-ab-testing
spec:
  hosts:
  - plaza-service
  http:
  - match:
    - headers:
        x-sync-policy:
          exact: ewma
    route:
    - destination:
        host: plaza-green
        port:
          number: 8000
      weight: 100
  - route:
    - destination:
        host: plaza-blue
        port:
          number: 8000
      weight: 100
